# git2pdf

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  run_azul.sh  run_bench.sh
.github/workflows/: build.yml
examples/: test_30_lines.rs
git2pdf/: Cargo.toml
git2pdf/src/: main.rs
src/: crate_discovery.rs  file_classifier.rs  git_ops.rs  html_generator.rs  main.rs
tests/: test_30_lines.html
