[package]
name = "git2pdf"
version = "0.1.0"
edition = "2021"
description = "Convert git repositories to PDF for code review"
license = "MIT"
repository = "https://github.com/fschutt/git2pdf"
keywords = ["git", "pdf", "code-review", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Git operations using gitoxide (pure Rust, no C dependencies)
gix = { version = "0.72", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# PDF generation with HTML support
# Use local path for development - change to git for release
# html_multithreaded enables parallel font loading for faster startup
printpdf = { path = "../printpdf", features = ["html_multithreaded"] }

# Syntax highlighting
syntect = "5"

# Cargo.toml parsing
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Parallel processing
rayon = "1"

# Gitignore-aware file walking
ignore = "0.4"

# URL parsing
url = "2"

[profile.release]
debug = true

[[bin]]
name = "git2pdf"
path = "src/main.rs"

[patch.crates-io]
rust-fontconfig = { path = "../rust-fontconfig" }
